load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

exports_files([
    "AssemblyInfo.cs.template",
    "WebDriver.snk",
])

pkg_zip(
    name = "strongnamed",
    srcs = [
        "//dotnet/src/support:support-strongnamed",
        "//dotnet/src/webdriver:webdriver-strongnamed",
    ],
)

pkg_zip(
    name = "release",
    srcs = [
        "//dotnet/src/support",
        "//dotnet/src/webdriver",
    ],
)
