load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

exports_files([
    "AssemblyInfo.cs.template",
    "WebDriver.snk",
])

pkg_zip(
    name = "strongnamed",
    srcs = [
        "//dotnet/src/support:support-strongnamed-pack",
        "//dotnet/src/webdriver:webdriver-strongnamed-pack",
    ],
    tags = [
        "release-artifact",
    ],
)

pkg_zip(
    name = "release",
    srcs = [
        "//dotnet/src/support:support-pack",
        "//dotnet/src/webdriver:webdriver-pack",
    ],
    tags = [
        "release-artifact",
    ],
)
