load(
    "@io_bazel_rules_closure//closure:defs.bzl",
    "closure_js_deps",
)

filegroup(
    name = "javascript",
    data = glob([
        "**/*.*",
    ]) + [
        ":deps.js",
    ],
    visibility = [
        "//java/client/test/org/openqa/selenium/environment:__pkg__",
    ],
)

closure_js_deps(
    name = "deps",
    visibility = [
        "//java/client/test/org/openqa/selenium/environment:__pkg__",
    ],
    deps = [
        "//javascript/atoms",
        "//javascript/webdriver",
    ],
)
